# rich_lib

./: .travis.yml  Cargo.toml  README.md  doc.sh
src/: buf_stream.rs  lib.rs  lines.rs
src/tests/: helper.rs  lines_for_string_tests.rs  merge_lines_tests.rs  mod.rs  split_lines_tests.rs
